--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Players</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <div>
-        <h1>Teste de resposividade</h1>
-    </div>
-</body>
+    <body>
+        <header class="header-top">
+            <div class="content flex-spbt-center">
+                <img src="img/Logo.svg" alt="logo E-players">
+                <nav class="menu">
+                    <ul class="flex-spbt-center">
+                        <li><a href="#">Início</a></li>
+                        <li><a href="#">Campeonatos</a></li>
+                        <li><a href="#">Resultados</a></li>
+                        <li><a href="#">Notícias</a></li>
+                        <li><a href="#">Cadastro/Login</a></li>
+                    </ul>
+                    <a href="#" id="barra">
+                        <i class="fas fa-bars"></i>
+                    </a>
+                </nav>
+            </div>
+        </header>
+        <main>
+
+
+        </main>
+        <footer>
+
+        </footer>
+
+    </body>
 </html>
