banner e games adicionados

--- a/index.html
+++ b/index.html
@@ -25,10 +25,28 @@
                 </nav>
             </div>
         </header>
-        <main>
-
-
+        <main class="banner">
+            <div class="content-banner">
+                <div class="image-banner">
+                    <img src="img/pilotos.png" alt="Pilotos de formula 1">
+                </div>
+                <div class="text-banner">
+                    <h1>LIGA E-Players</h1>
+                    <p>O maior portal de campeonatos online</p>
+                    <a href="#">Inscreva-se</a>
+                </div>
+            </div>
         </main>
+    
+        <section class="games">
+            <div class="content-games">
+                <a href="#"><img src="img/formula-1-logo-1-1 1.png" alt="Logo formula 1"></a>
+                <a href="#"><img src="img/logo-lol-300x131 1.png" alt="Logo League of Legends"></a>
+                <a href="#"><img src="img/Counter-Strike-Logo-Transparent-PNG 1.png" alt="Logo Counter-Strike"></a>
+                <a href="#"><img src="img/4bcd537b6c034e297f0030cf08887426 1.png" alt="Logo Valorant"></a>
+                <a href="#"><img src="img/800px-FIFA_series_logo 1.png" alt="Logo Fifa"></a>
+            </div>
+        </section>
         <footer>
 
         </footer>
