--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                 </div>
             </div>
         </main>
-    
         <section class="games">
             <div class="content-games">
                 <a href="#"><img src="img/formula-1-logo-1-1 1.png" alt="Logo formula 1"></a>
@@ -47,9 +46,21 @@
                 <a href="#"><img src="img/800px-FIFA_series_logo 1.png" alt="Logo Fifa"></a>
             </div>
         </section>
+        <section class="sobre">
+            <div class="sobre-angulos">
+                <div class="angulo"> </div>
+            </div>
+            <div class="container-sobre">
+                <div class="content-sobre">
+                    <div class="texto-sobre">
+                       <h2>Como participar das ligas?</h2>
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore velit reiciendis aliquid dicta quibusdam at sapiente? Earum, aspernatur! Suscipit alias eveniet, autem odit culpa vero rem laudantium impedit quos consectetur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore velit reiciendis aliquid dicta quibusdam at sapiente? Earum, aspernatur! Suscipit alias eveniet, autem odit culpa vero rem laudantium impedit quos consectetur.</p>
+                    </div> 
+                   <img src="img/ez.png" alt="ezreal personagem do lol">
+                </div>
+            </div>
+        </section>
         <footer>
-
         </footer>
-
     </body>
 </html>
