--- a/index.html
+++ b/index.html
@@ -60,7 +60,226 @@
                 </div>
             </div>
         </section>
+
         <footer>
         </footer>
     </body>
+</html> <section class="matches">
+        <div class="content-matches">
+            <div class="live-matches">
+                <h2>Ao <br>vivo</h2>
+                <div class="teams-matches">
+                    <img src="img/sk-logo.png" alt="logo time SK">
+                    <p>vs</p>
+                    <img src="img/flamengo-logo.png" alt="Logo time">
+                </div>
+            </div>
+            <div class="later-matches">
+                <h2>Em <br>Breve</h2>
+                <div class="teams-matches" id="espacamento">
+                    <p>SK</p>
+                    <img src="img/sk-logo.png" alt="logo time SK">
+                    <p>VS</p>
+                    <img src="img/flamengo-logo.png" alt="Logo time">
+                    <p>FLA</p>
+                </div>
+                <div class="teams-matches">
+                    <p>SK</p>
+                    <img src="img/sk-logo.png" alt="logo time SK">
+                    <p>VS</p>
+                    <img src="img/flamengo-logo.png" alt="Logo time">
+                    <p>FLA</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- News - Section -->
+    <section class="news">
+        <h2>Noticias</h2>
+        <div class="content-news">
+            <div class="news-news">
+                <div class="bloco-news">
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia3.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia2.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia1.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bloco-news">
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia6.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia4.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                    <div class="news-bloco">
+                        <div class="image-bloco">
+                            <img src="img/capa-noticia5.png" alt="Capa da noticia">
+                        </div>
+                        <div class="text-bloco">
+                            <h3>Titulo da noticia</h3>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content-tabela">
+                <div class="tabela-news">
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>07/12/2020 20:00</p>
+                    </div>
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>08/12/2020 17:00</p>
+                    </div>
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>08/12/2020 18:00</p>
+                    </div>
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>08/12/2020 19:00</p>
+                    </div>
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>09/12/2020 21:00</p>
+                    </div>
+                    <div class="team-tabela">
+                        <div class="placar-tabela">
+                            <p>SK</p>
+                            <img src="img/sk-logo.png" alt="Logo do time Sk">
+                            <p>VS</p>
+                            <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
+                            <p>FLA</p>
+                        </div>
+                        <p>10/12/2020 18:00</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="content-footer">
+            <div class="superior-footer">
+                <div class="links-uteis-footer">
+                    <h4>Links Uteis</h4>
+                    <ul>
+                        <li><a href="#">Suporte</a></li>
+                        <li><a href="#">Central de ajuda</a></li>
+                        <li><a href="#">Regras de utilização</a></li>
+                        <li><a href="#">Entre em contato com nossa equipe</a></li>
+                    </ul>
+                </div>
+                <div class="mapa-site-footer">
+                    <div class="mapa-content">
+                        <h4>Mapa do Site</h4>
+                        <ul>
+                            <li><a href="#">Inicio</a></li>
+                            <li><a href="#">Campeonatos</a></li>
+                            <li><a href="#">Resultados</a></li>
+                            <li><a href="#">Noticias</a></li>
+                            <li><a href="#">Login</a></li>
+                            <li><a href="#">Buscar</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="social-medias-footer">
+                    <div class="redes-content">
+                        <h4>Redes Sociais</h4>
+                        <div class="links-redes">
+                            <a href="#"><img src="img/instagram.png" alt="Logo do Instagram"></a>
+                            <a href="#"><img src="img/youtube.png" alt="Logo do Youtube"></a>
+                            <a href="#"><img src="img/linkedin.png" alt="Logo Linkedin"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="line-footer"></div>
+
+            <div class="inferior-footer">
+                <div class="logo-footer">
+                    <a href="#"><img src="img/Logo.svg" alt="Logo E-Players"></a>
+                </div>
+                <div class="direitos-footer">
+                    <p>Todos os direitos reservados a <span>Giovanni Ribeiro Iannace </span>© 2020</p>
+                </div>
+                <div class="botoes-footer">
+                    <ul>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Ajuda</a></li>
+                        <li><a href="#">Contato
+                        </a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
