semi-finalizado (pendencia na padronização de medidas)

--- a/index.html
+++ b/index.html
@@ -60,30 +60,26 @@
                 </div>
             </div>
         </section>
-
-        <footer>
-        </footer>
-    </body>
-</html> <section class="matches">
-        <div class="content-matches">
-            <div class="live-matches">
+        <section class="partidas">
+        <div class="content-partidas">
+            <div class="live-partidas">
                 <h2>Ao <br>vivo</h2>
-                <div class="teams-matches">
+                <div class="confrontos">
                     <img src="img/sk-logo.png" alt="logo time SK">
                     <p>vs</p>
                     <img src="img/flamengo-logo.png" alt="Logo time">
                 </div>
             </div>
-            <div class="later-matches">
+            <div class="proximas-partidas">
                 <h2>Em <br>Breve</h2>
-                <div class="teams-matches" id="espacamento">
+                <div class="confrontos" id="espacamento">
                     <p>SK</p>
                     <img src="img/sk-logo.png" alt="logo time SK">
                     <p>VS</p>
                     <img src="img/flamengo-logo.png" alt="Logo time">
                     <p>FLA</p>
                 </div>
-                <div class="teams-matches">
+                <div class="confrontos">
                     <p>SK</p>
                     <img src="img/sk-logo.png" alt="logo time SK">
                     <p>VS</p>
@@ -93,63 +89,63 @@
             </div>
         </div>
     </section>
-    <section class="news">
+    <section class="Noticias">
         <h2>Noticias</h2>
-        <div class="content-news">
-            <div class="news-news">
-                <div class="bloco-news">
-                    <div class="news-bloco">
+        <div class="content-noticias">
+            <div class="aba-noticias">
+                <div class="bloco-noticias">
+                    <div class="noticias-bloco">
                         <div class="image-bloco">
                             <img src="img/capa-noticia3.png" alt="Capa da noticia">
                         </div>
-                        <div class="text-bloco">
+                        <div class="texto-bloco">
                             <h3>Titulo da noticia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
                     </div>
-                    <div class="news-bloco">
+                    <div class="noticias-bloco">
                         <div class="image-bloco">
                             <img src="img/capa-noticia2.png" alt="Capa da noticia">
                         </div>
-                        <div class="text-bloco">
+                        <div class="texto-bloco">
                             <h3>Titulo da noticia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
                     </div>
-                    <div class="news-bloco">
+                    <div class="noticias-bloco">
                         <div class="image-bloco">
                             <img src="img/capa-noticia1.png" alt="Capa da noticia">
                         </div>
-                        <div class="text-bloco">
+                        <div class="texto-bloco">
                             <h3>Titulo da noticia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
                     </div>
                 </div>
-                <div class="bloco-news">
-                    <div class="news-bloco">
+                <div class="bloco-noticias">
+                    <div class="noticias-bloco">
                         <div class="image-bloco">
                             <img src="img/capa-noticia6.png" alt="Capa da noticia">
                         </div>
-                        <div class="text-bloco">
+                        <div class="texto-bloco">
                             <h3>Titulo da noticia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
                     </div>
-                    <div class="news-bloco">
+                    <div class="noticias-bloco">
                         <div class="image-bloco">
                             <img src="img/capa-noticia4.png" alt="Capa da noticia">
                         </div>
-                        <div class="text-bloco">
+                        <div class="texto-bloco">
                             <h3>Titulo da noticia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
                     </div>
-                    <div class="news-bloco">
+                    <div class="noticias-bloco">
                         <div class="image-bloco">
                             <img src="img/capa-noticia5.png" alt="Capa da noticia">
                         </div>
-                        <div class="text-bloco">
+                        <div class="texto-bloco">
                             <h3>Titulo da noticia</h3>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text .</p>
                         </div>
@@ -157,8 +153,8 @@
                 </div>
             </div>
             <div class="content-tabela">
-                <div class="tabela-news">
-                    <div class="team-tabela">
+                <div class="tabela-infos">
+                    <div class="times-tabela">
                         <div class="placar-tabela">
                             <p>SK</p>
                             <img src="img/sk-logo.png" alt="Logo do time Sk">
@@ -168,7 +164,7 @@
                         </div>
                         <p>07/12/2020 20:00</p>
                     </div>
-                    <div class="team-tabela">
+                    <div class="times-tabela">
                         <div class="placar-tabela">
                             <p>SK</p>
                             <img src="img/sk-logo.png" alt="Logo do time Sk">
@@ -178,7 +174,7 @@
                         </div>
                         <p>08/12/2020 17:00</p>
                     </div>
-                    <div class="team-tabela">
+                    <div class="times-tabela">
                         <div class="placar-tabela">
                             <p>SK</p>
                             <img src="img/sk-logo.png" alt="Logo do time Sk">
@@ -188,7 +184,7 @@
                         </div>
                         <p>08/12/2020 18:00</p>
                     </div>
-                    <div class="team-tabela">
+                    <div class="times-tabela">
                         <div class="placar-tabela">
                             <p>SK</p>
                             <img src="img/sk-logo.png" alt="Logo do time Sk">
@@ -198,7 +194,7 @@
                         </div>
                         <p>08/12/2020 19:00</p>
                     </div>
-                    <div class="team-tabela">
+                    <div class="times-tabela">
                         <div class="placar-tabela">
                             <p>SK</p>
                             <img src="img/sk-logo.png" alt="Logo do time Sk">
@@ -208,7 +204,7 @@
                         </div>
                         <p>09/12/2020 21:00</p>
                     </div>
-                    <div class="team-tabela">
+                    <div class="times-tabela">
                         <div class="placar-tabela">
                             <p>SK</p>
                             <img src="img/sk-logo.png" alt="Logo do time Sk">
