links e padrõres add

--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                     <div class="redes-content">
                         <h4>Redes Sociais</h4>
                         <div class="links-redes">
-                            <a href="#"><img src="img/instagram.png" alt="Logo do Instagram"></a>
-                            <a href="#"><img src="img/youtube.png" alt="Logo do Youtube"></a>
-                            <a href="#"><img src="img/linkedin.png" alt="Logo Linkedin"></a>
+                            <a href="https://www.instagram.com/giovanniiannace/"><img src="img/instagram.png" alt="Logo do Instagram"></a>
+                            <a href="https://www.youtube.com/playlist?list=PLLEBQ7c8WP7ZB4aXEiL60s46FieCGMbqx"><img src="img/youtube.png" alt="Logo do Youtube"></a>
+                            <a href="https://www.linkedin.com/in/giovanni-ribeiro-iannace-449617180/"><img src="img/linkedin.png" alt="Logo Linkedin"></a>
                         </div>
                     </div>
                 </div>
