1199px até sobre resposividade feita

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="img/pilotos.png" alt="Pilotos de formula 1">
                 </div>
                 <div class="text-banner">
-                    <h1>LIGA E-Players</h1>
+                    <h1>LIGA E-PLAYERS</h1>
                     <p>O maior portal de campeonatos online</p>
                     <a href="#">Inscreva-se</a>
                 </div>
