--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="proximas-partidas">
                 <h2>Em <br>Breve</h2>
-                <div class="confrontos" id="espacamento">
+                <div class="confrontos">
                     <p>SK</p>
                     <img src="img/sk-logo.png" alt="logo time SK">
                     <p>VS</p>
