--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="ao-vivo">
                     <h2>Em Breve</h2>
                 </div>
-                <div class="confrontos id="espacamento">
+                <div class="confrontos id=espacamento">
                     <p>SK</p>
                     <img src="img/sk-logo.png" alt="logo time SK">
                     <p>vs</p>
@@ -195,7 +195,7 @@
                             <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
                             <p>FLA</p>
                         </div>
-                        <p>1/12/2020 19:00</p>
+                        <p>2/12/2020 16:00</p>
                     </div>
                     <div class="team-tabela">
                         <div class="placar-tabela">
@@ -205,7 +205,7 @@
                             <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
                             <p>FLA</p>
                         </div>
-                        <p>1/12/2020 19:00</p>
+                        <p>3/12/2020 17:00</p>
                     </div>
                     <div class="team-tabela none-mobile2">
                         <div class="placar-tabela">
@@ -215,7 +215,7 @@
                             <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
                             <p>FLA</p>
                         </div>
-                        <p>1/12/2020 19:00</p>
+                        <p>4/12/2020 19:00</p>
                     </div>
                     <div class="team-tabela none-mobile2">
                         <div class="placar-tabela">
@@ -225,7 +225,7 @@
                             <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
                             <p>FLA</p>
                         </div>
-                        <p>1/12/2020 19:00</p>
+                        <p>5/12/2020 18:00</p>
                     </div>
                     <div class="team-tabela none-mobile2">
                         <div class="placar-tabela">
@@ -235,7 +235,7 @@
                             <img src="img/flamengo-logo.png" alt="Logo do time Flamengo">
                             <p>FLA</p>
                         </div>
-                        <p>1/12/2020 19:00</p>
+                        <p>10/12/2020 20:00</p>
                     </div>
                 </div>
             </div> 
@@ -244,7 +244,7 @@
 
     <footer class="footer">
         <div class="content-footer">
-            <div class="superior-footer">
+            <div class="cima-footer">
                 <div class="mapa-site-footer">
                     <div class="mapa-content">
                         <h4>Mapa do Site</h4>
@@ -272,7 +272,7 @@
 
             <div class="line-footer"></div>
 
-            <div class="inferior-footer">
+            <div class="baixo-footer">
                 <div class="logo-footer">
                     <a href="#"><img src="img/Logo.svg" alt="Logo E-Players"></a>
                 </div>
